[gd_scene load_steps=4 format=3 uid="uid://b76118bhlw7up"]

[ext_resource type="Theme" uid="uid://bprlrvabch0qk" path="res://UI/theme.tres" id="1_uk4tb"]
[ext_resource type="Script" uid="uid://d1wun27dk8f5o" path="res://UI/control.gd" id="2_sq6jl"]
[ext_resource type="Theme" uid="uid://m1chhbmd1cxr" path="res://UI/general_theme.tres" id="3_i7e4u"]

[node name="IngameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_sq6jl")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -574.0
offset_top = 57.0
offset_right = 573.0
offset_bottom = 160.0
theme = ExtResource("1_uk4tb")
theme_override_font_sizes/font_size = 50
text = "Level selection"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -106.0
offset_right = 250.0
offset_bottom = 179.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="PlayButton1" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme = ExtResource("3_i7e4u")
text = "1"

[node name="PlayButton2" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme = ExtResource("3_i7e4u")
text = "2"

[node name="PlayButton3" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme = ExtResource("3_i7e4u")
text = "3"

[node name="PlayButton4" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme = ExtResource("3_i7e4u")
text = "4"

[node name="PlayButton5" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme = ExtResource("3_i7e4u")
text = "5"

[node name="CreditButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -109.0
offset_right = 80.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_i7e4u")
text = "Back"

[connection signal="pressed" from="CreditButton" to="." method="_go_to_main_menu"]
